[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/HexGrid.gd" type="Script" id=1]
[ext_resource path="res://Scripts/HexCellTexture.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Tiles/Finish1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tiles/Finish2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tiles/Finish3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Tiles/Hidden1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tiles/Hidden2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Tiles/Hidden3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Tiles/Cell2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Tiles/Cell1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Tiles/Cell3.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=12]

[node name="HexGrid" type="Node2D"]
script = ExtResource( 1 )
CellsX = 32
CellsY = 32
Scale = 0.5
Offset = Vector2( 45, 50.5 )

[node name="Tiles" type="Node2D" parent="."]

[node name="CellTiles" type="Node2D" parent="Tiles"]
script = ExtResource( 2 )
Textures = [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ]

[node name="HiddenTiles" type="Node2D" parent="Tiles"]
script = ExtResource( 2 )
Textures = [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]

[node name="FinishTiles" type="Node2D" parent="Tiles"]
script = ExtResource( 2 )
Textures = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="Cells" type="Node2D" parent="."]
position = Vector2( 24, 0 )

[node name="Player" parent="." instance=ExtResource( 12 )]
